# Numerixx

./: .clang-format  .clang-format-backup  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: EnableLTO.cmake  SetDefaultWarnings.cmake
demo/: CMakeLists.txt  DemoDeriv.cpp  DemoFunction.cpp  DemoIntegrate.cpp  DemoInterpolate.cpp  DemoMatrix.cpp  DemoMultiroot.cpp  DemoOptimize.cpp  DemoPoly.cpp  DemoRoot.cpp  DemoRootFinding.cpp  DemoRootSearching.cpp  TestPoly.cpp  _external.hpp  main.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  docDerivative.rst  docError.rst  docIntro.rst  docPolynomial.rst  docRoots.rst  index.rst  roots.rst
docs/poly/: Polynomial.puml
numerix/: CMakeLists.txt  differentiation.hpp  interpolation.hpp  numerix.hpp
numerix/calculus/: Derivatives.hpp  Jacobian.hpp  derivatives.hpp
numerix/linalg/: FactorizeGJ.h  FactorizeGJ.hpp  GaussJordan.h  Matrix.hpp
numerix/linalg/Matrix/: Matrix.hpp  MatrixBase.hpp  MatrixColIter.hpp  MatrixCols.hpp  MatrixCommon.h  MatrixCommon.hpp  MatrixElemIter.hpp  MatrixElementIter.hpp  MatrixElements.hpp  MatrixFunctions.hpp  MatrixRowIter.hpp  MatrixRows.hpp  MatrixSlice.hpp  MatrixView.hpp
numerix/multiroots/: MultiFunction.hpp  Multiroots.hpp
numerix/poly/: Polynomial.hpp  polynomial.hpp
numerix/polyroots/: Polyroots.hpp  polyroots.hpp
numerix/roots/: RootBracketing.hpp  RootError.hpp  RootPolishing.hpp  roots.hpp
numerixx/: CMakeLists.txt  integration.hpp  numerixx.hpp
numerixx/.dependencies/expected/: expected.hpp
numerixx/.dependencies/gcem/gcem_incl/: ceil.hpp  floor.hpp  round.hpp  trunc.hpp
numerixx/.external/blaze/: CMakeLists.txt
numerixx/.external/blaze/blaze/math/: Infinity.h
numerixx/.external/blaze/blaze/system/: Platform.h
numerixx/.external/blaze/blaze/util/: Limits.h
numerixx/.utils/: Concepts.hpp  Constants.hpp  Error.hpp  Functions.hpp  _external.hpp
numerixx/Integrate/: Integ.hpp  Integration.hpp
numerixx/Integrate/impl/: Integration.hpp  IntegrationError.hpp  IntegrationTraits.hpp  IntegrationValidation.hpp  _external.hpp
numerixx/Interpolate/: Interp.hpp
numerixx/Interpolate/impl/: Interpolate.hpp  _external.hpp
numerixx/calculus/: DerivativeError.hpp  Derivatives.hpp  Derivatives.hpp.bak  Jacobian.hpp  MultiDerivatives.hpp
numerixx/deriv/: Deriv.hpp
numerixx/deriv/impl/: Derivatives.hpp
numerixx/func/: Func.hpp
numerixx/func/impl/: Function.hpp
numerixx/function/: Function.hpp
numerixx/linalg/: FactorizeGJ.hpp  Matrix.hpp
numerixx/linalg/Matrix/: Matrix.hpp  MatrixBase.hpp  MatrixColIter.hpp  MatrixCols.hpp  MatrixCommon.hpp  MatrixElemIter.hpp  MatrixFunctions.hpp  MatrixRowIter.hpp  MatrixRows.hpp  MatrixSlice.hpp  MatrixView.hpp
numerixx/multiroots/: MultiDerivatives.hpp  MultiFunction.hpp  Multiroots.hpp
numerixx/multiroots/impl/: ContainerTraits.hpp  FunctionTraits.hpp  MultiDerivatives.hpp  MultiFunction.hpp  MultiFunctionArray.hpp  Multiroots.hpp
numerixx/optimize/: Optim.hpp
numerixx/optimize/impl/: OptimBracket.hpp  OptimCommon.hpp  OptimPolish.hpp  OptimSearch.hpp  Optimize.hpp  _external.hpp
numerixx/poly/: Poly.hpp  Polynomial.hpp  PolynomialError.hpp  Polyroots.hpp
numerixx/poly/impl/: Polynomial.hpp  PolynomialError.hpp  Polyroots.hpp
numerixx/polyroots/: Polyroots.hpp
numerixx/roots/: RootBracketing.hpp  RootCommon.hpp  RootError.hpp  RootPolishing.hpp  RootSearching.hpp  Roots.Fwd.hpp  Roots.hpp
numerixx/roots/fwd/: Bracketing.fwd.hpp  Common.fwd.hpp  Polishing.fwd.hpp  Searching.fwd.hpp
numerixx/roots/impl/: Bracketing.impl.hpp  Common.impl.hpp  Polishing.impl.hpp  RootBracketing.hpp  RootCommon.hpp  RootPolishing.hpp  RootSearching.hpp  Searching.impl.hpp  _external.hpp
numerixx/utils/: Concepts.hpp  Constants.hpp
test/: CMakeLists.txt  testDerivatives.cpp  testMatrix.cpp  testPolynomials.cpp  testRootBracketing.cpp  testRootPolishing.cpp
test/Catch2/src/catch2/benchmark/detail/: catch_run_for_at_least.hpp
